--- a/Lazztech.Cloud.ClientFacade/Pages/Event/Index.cshtml
+++ b/Lazztech.Cloud.ClientFacade/Pages/Event/Index.cshtml
@@ -52,7 +52,7 @@
                         <h5 class="card-title">@Model.Mentors[i].FirstName</h5>
                         <p>@Model.Mentors[i].ProfessionalTitle</p>
                         <p class="card-text">Interests: @Model.Mentors[i].Description</p>
-                        <button type="button" class="@(Model.Mentors[i].IsAvailable ? "btn btn-primary" : "btn btn-outline-secondary")" data-toggle="modal" data-target="@(Model.Mentors[i].IsAvailable ? "#"+Model.Mentors[i].MentorId.ToString() : "")">
+                        <button type="button" class="@(Model.Mentors[i].IsAvailable ? "btn btn-primary" : "btn btn-outline-secondary")" data-toggle="modal" data-target="@(Model.Mentors[i].IsAvailable ? $"#{Model.Mentors[i].FirstName}{Model.Mentors[i].MentorId}" : "")">
                             @(Model.Mentors[i].IsAvailable ? "Request Their Assistance" : "Currently Unavailable")
                         </button>
                     </div>
@@ -66,7 +66,7 @@
 <!-- MODALS -->
 @foreach (var mentor in Model.Mentors)
 {
-    <div class="modal fade" id="@mentor.MentorId.ToString()" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+    <div class="modal fade" id="@mentor.FirstName@mentor.MentorId" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
         <div class="modal-dialog modal-dialog-centered" role="document">
             @using (Html.BeginForm("MentorRequest", "Event"))
             {
