Added MentorRequests crud & fixed checkboxes with minton theme

--- a/Lazztech.Cloud.ClientFacade/Pages/Admin/EventManagement/Index.cshtml
+++ b/Lazztech.Cloud.ClientFacade/Pages/Admin/EventManagement/Index.cshtml
@@ -35,7 +35,7 @@
         <p>
             Count: @Model.MentorRequestCount
         </p>
-        <a class="btn btn-dark" asp-page="./MentorInvites/Index" role="button">Mentor Invites</a>
+        <a class="btn btn-dark" asp-page="./MentorRequests/Index" role="button">Mentor Requests</a>
     </div>
     <div class="col">
         <h3>Mentor Invites</h3>
