--- a/Lazztech.Cloud.ClientFacade/Pages/Admin/EventManagement/Mentors/Edit.cshtml
+++ b/Lazztech.Cloud.ClientFacade/Pages/Admin/EventManagement/Mentors/Edit.cshtml
@@ -57,14 +57,14 @@
                 <span asp-validation-for="Mentor.Email" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <div class="checkbox">
+                <div class="custom-checkbox">
                     <label>
                         <input asp-for="Mentor.IsAvailable" /> @Html.DisplayNameFor(model => model.Mentor.IsAvailable)
                     </label>
                 </div>
             </div>
             <div class="form-group">
-                <div class="checkbox">
+                <div class="custom-checkbox">
                     <label>
                         <input asp-for="Mentor.IsPresent" /> @Html.DisplayNameFor(model => model.Mentor.IsPresent)
                     </label>
