--- a/Lazztech.Cloud.ClientFacade/Pages/Shared/Minton/_Layout.cshtml
+++ b/Lazztech.Cloud.ClientFacade/Pages/Shared/Minton/_Layout.cshtml
@@ -196,6 +196,9 @@
         <script src="~/lib/bootstrap/dist/js/bootstrap.js"></script>*@
         <script src="~/js/site.js" asp-append-version="true"></script>
         <!--End Of Bootstrap 4 Section-->
+        <script src="~/lib//jquery-validation-unobtrusive/jquery.validate.unobtrusive.min.js"></script>
+
+
         <!--Minton Theme Section-->
         <script>
             var resizefunc = [];
