--- a/Lazztech.Cloud.ClientFacade/Pages/Shared/Minton/_Layout_HackathonHandler.cshtml
+++ b/Lazztech.Cloud.ClientFacade/Pages/Shared/Minton/_Layout_HackathonHandler.cshtml
@@ -125,9 +125,11 @@
     <environment include="Development">
         <!--Bootstrap 4 Section-->
         @*<script src="~/lib/jquery/dist/jquery.js"></script>
-            <script src="~/lib/bootstrap/dist/js/bootstrap.js"></script>*@
+        <script src="~/lib/bootstrap/dist/js/bootstrap.js"></script>*@
         <script src="~/js/site.js" asp-append-version="true"></script>
         <!--End Of Bootstrap 4 Section-->
+        <script src="~/lib//jquery-validation-unobtrusive/jquery.validate.unobtrusive.min.js"></script>
+
         @*SIGNALR EXAMPLE CODE BELOW HERE------------*@
         <script src="~/lib/signalr/dist/browser/signalr.js"></script>
         <script src="~/js/eventManagement.js"></script>
