--- a/Lazztech.Cloud.ClientFacade/Pages/Shared/Minton/_Layout_Admin.cshtml
+++ b/Lazztech.Cloud.ClientFacade/Pages/Shared/Minton/_Layout_Admin.cshtml
@@ -181,9 +181,12 @@
     <environment include="Development">
         <!--Bootstrap 4 Section-->
         @*<script src="~/lib/jquery/dist/jquery.js"></script>
-            <script src="~/lib/bootstrap/dist/js/bootstrap.js"></script>*@
+        <script src="~/lib/bootstrap/dist/js/bootstrap.js"></script>*@
         <script src="~/js/site.js" asp-append-version="true"></script>
         <!--End Of Bootstrap 4 Section-->
+        <script src="~/lib//jquery-validation-unobtrusive/jquery.validate.unobtrusive.min.js"></script>
+
+
         <!--Minton Theme Section-->
         <script>
             var resizefunc = [];
