--- a/Lazztech.Cloud.ClientFacade/Pages/Shared/Minton/_Layout_HackathonHandler.cshtml
+++ b/Lazztech.Cloud.ClientFacade/Pages/Shared/Minton/_Layout_HackathonHandler.cshtml
@@ -24,9 +24,7 @@
     <title>@ViewData["Title"] - Lazztech.Cloud.CloudWebApp</title>
 
     <environment include="Development">
-        @*Bootstrap 4 theme*@
-        @*<link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
-            <link rel="stylesheet" href="~/css/site.css" />*@
+        <link rel="stylesheet" href="~/confetti/css/confetti.css" />
 
         @*Minton theme*@
         <link rel="stylesheet" href="~/minton/plugins/jquery-circliful/css/jquery.circliful.css" />
@@ -124,11 +122,12 @@
 
     <environment include="Development">
         <!--Bootstrap 4 Section-->
-        @*<script src="~/lib/jquery/dist/jquery.js"></script>
-        <script src="~/lib/bootstrap/dist/js/bootstrap.js"></script>*@
+        <script src="~/lib/jquery/dist/jquery.js"></script>
+        @*<script src="~/lib/bootstrap/dist/js/bootstrap.js"></script>*@
         <script src="~/js/site.js" asp-append-version="true"></script>
         <!--End Of Bootstrap 4 Section-->
-        <script src="~/lib//jquery-validation-unobtrusive/jquery.validate.unobtrusive.min.js"></script>
+        @*<script src="~/lib//jquery-validation-unobtrusive/jquery.validate.unobtrusive.min.js"></script>*@
+        <script src="~/confetti/js/confetti.js"></script>
 
         @*SIGNALR EXAMPLE CODE BELOW HERE------------*@
         <script src="~/lib/signalr/dist/browser/signalr.js"></script>
