--- a/Lazztech.Cloud.ClientFacade/Pages/Event/Index.cshtml
+++ b/Lazztech.Cloud.ClientFacade/Pages/Event/Index.cshtml
@@ -117,7 +117,8 @@
                     </div>
                     <div class="modal-footer">
                         <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                        <button class="btn btn-primary" type="submit" value="#teamPin" id="btnSubmit" data-dismiss="modal" onclick="confetti()">Submit</button>
+                        <button class="btn btn-primary" type="submit" value="#teamPin" id="btnSubmit">Submit</button>
+                        @*<button class="btn btn-primary" type="submit" value="#teamPin" id="btnSubmit" data-dismiss="modal" onclick="confetti()">Submit</button>*@
                     </div>
                 </form>
             </div>
