--- a/Lazztech.Cloud.ClientFacade/Pages/Shared/Minton/_Layout_HackathonHandler.cshtml
+++ b/Lazztech.Cloud.ClientFacade/Pages/Shared/Minton/_Layout_HackathonHandler.cshtml
@@ -104,7 +104,7 @@
         <div class="modal-dialog modal-dialog-centered" role="document">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title" id="exampleModalLongTitle">Request Accepted</h5>
+                    <h5 class="modal-title" id="exampleModalLongTitle">Request Processed</h5>
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                         <span aria-hidden="true">&times;</span>
                     </button>
@@ -113,7 +113,7 @@
                     <p id="mentorRequestUpdateParagraph"></p>
                 </div>
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                    <button type="button" class="btn btn-secondary" onClick="window.location.reload();">Refresh Page</button>
                 </div>
             </div>
         </div>
