--- a/Lazztech.Cloud.ClientFacade/Pages/Shared/_Layout_HackathonHandler.cshtml
+++ b/Lazztech.Cloud.ClientFacade/Pages/Shared/_Layout_HackathonHandler.cshtml
@@ -175,10 +175,10 @@
         <div class="modal-dialog modal-dialog-centered" role="document">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title" id="exampleModalLongTitle">Request Processed</h5>
-                    @*<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <h5 class="modal-title" id="exampleModalLongTitle">Response Processed</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                         <span aria-hidden="true">&times;</span>
-                    </button>*@
+                    </button>
                 </div>
                 <div class="modal-body">
                     <p id="mentorRequestUpdateParagraph"></p>
